--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
+package.lock.json
 /.pnp
 .pnp.js
 
@@ -10,6 +9,8 @@
 
 # production
 /build
+.firebase
+.firebaserc
 
 # misc
 .DS_Store
